# lgb

./: .gitignore  CMakeLists.txt  README.md
src/: compile_commands.json  main.c  types.h  util.c  util.h
src/App/: app.c  app.h  input.c  input.h  window.c  window.h
src/Emulator/: mem.c  mem.h
src/Emulator/cpu/: apu.c  apu.h  cpu.c  cpu.h  instruction.c  instruction.h  ppu.c  ppu.h
src/Emulator/cpu/instructions/: cb.c  cb.h  inc_dec_r16.c  inc_dec_r16.h  inc_r16.c  inc_r16.h  instructions.h  ld_r16.c  ld_r16.h  ld_r8.c  ld_r8.h  logic_r8.c  logic_r8.h
